WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138559
Reset WebPageProxy's isPlayingAudio state after web process crash or page invalidation
https://bugs.webkit.org/show_bug.cgi?id=138559
Summary
Reset WebPageProxy's isPlayingAudio state after web process crash or page inv...
Ada Chan
Reported
2014-11-09 23:57:37 PST
Reset WebPageProxy::m_isPlayingAudio after web process crash
Attachments
Patch
(1.58 KB, patch)
2014-11-10 00:11 PST
,
Ada Chan
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ada Chan
Comment 1
2014-11-10 00:11:22 PST
Created
attachment 241281
[details]
Patch
Andreas Kling
Comment 2
2014-11-10 11:06:34 PST
Comment on
attachment 241281
[details]
Patch r=me
Ada Chan
Comment 3
2014-11-10 12:42:48 PST
Committed:
http://trac.webkit.org/changeset/175822
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug