Reset WebPageProxy's isPlayingAudio state after web process crash or page invalidation. https://bugs.webkit.org/show_bug.cgi?id=138559

Reviewed by Andreas Kling.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::resetState):

Canonical link: https://commits.webkit.org/156402@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@175822 268f45cc-cd09-0410-ab3c-d52691b4dbfc